--- a/contracts/cv-toolchain/package.json
+++ b/contracts/cv-toolchain/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "composer-admin": "^0.20.7",
     "composer-cli": "^0.20.7",
+ "composer-rest-server": "^0.20.7",
     "composer-client": "^0.20.7",
     "composer-common": "^0.20.7",
     "composer-connector-embedded": "^0.20.7",
