--- a/contracts/cv-toolchain/package.json
+++ b/contracts/cv-toolchain/package.json
@@ -22,6 +22,7 @@
     "composer-admin": "^0.20.7",
     "composer-cli": "^0.20.7",
  "composer-rest-server": "^0.20.7",
+"generator-hyperledger-composer": "^0.20.7",
     "composer-client": "^0.20.7",
     "composer-common": "^0.20.7",
     "composer-connector-embedded": "^0.20.7",
